--- a/Omnifood/content/CSS/style.css
+++ b/Omnifood/content/CSS/style.css
@@ -6,12 +6,15 @@
 html {
   /* 1 rem=10px 10/16-->0.625*/
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 body {
   font-family: "Rubik", "Inter", sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
+  /*works only if nothing positioned relative to the body*/
+  overflow-x: hidden;
 }
 
 .section-hero {
@@ -50,13 +53,34 @@ body {
   /*cz we want header to be sticky*/
   height: 9.6rem;
   padding: 0 4.8rem;
+  position: relative;
 }
+/*MOBILE NAV*/
+.btn-mobile-nav {
+  border: none;
+  background-color: none;
+  cursor: pointer;
+  display: none;
+}
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+/*
+  <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+*/
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
+}
+
 /*Navigation*/
 .main-nav-list {
   list-style: none;
   display: flex;
   align-items: center;
-  gap: 3.2rem;
+  gap: 4.8rem;
 }
 .main-nav-link:link,
 .main-nav-link:visited {
@@ -221,7 +245,7 @@ body {
 .section-testimonials {
   background-color: #fdf2e9;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 55fr 45fr;
   align-items: center;
 }
 .testimonials-container {
