--- a/Omnifood/content/CSS/style.css
+++ b/Omnifood/content/CSS/style.css
@@ -7,6 +7,9 @@ html {
   /* 1 rem=10px 10/16-->0.625*/
   font-size: 62.5%;
   overflow-x: hidden;
+
+  /*Does not work on safari and on edge
+  scroll-behavior: smooth; */
 }
 body {
   font-family: "Rubik", "Inter", sans-serif;
@@ -61,6 +64,22 @@ body {
   background-color: none;
   cursor: pointer;
   display: none;
+}
+/*STICY NAVIGATION*/
+.sticky .header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(253, 242, 233);
+  height: 8rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  z-index: 999;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+.sticky .section-hero {
+  margin-top: 9.6rem;
 }
 .icon-mobile-nav {
   height: 4.8rem;
